fix product styles on tablet

--- a/client/components/Product/Product.module.scss
+++ b/client/components/Product/Product.module.scss
@@ -1,11 +1,11 @@
 .card {
-  @include mq(desktop) {
+  @include mq(tablet) {
     display: flex;
   }
 }
 
 .cardItems {
-  @include mq(desktop) {
+  @include mq(tablet) {
     flex: 1 0 50%;
   }
 }
@@ -22,6 +22,18 @@
   margin: rem(0 0 16 0);
 }
 
+.imageCard {
+  @include mq(tablet) {
+    margin-right: rem(16);
+    max-width: rem(300);
+  }
+
+  @include mq(desktop) {
+    margin-right: 0;
+    max-width: none;
+  }
+}
+
 .image {
   border-radius: rem(16);
 }
@@ -30,6 +42,10 @@
   @extend %h2;
 
   margin: rem(16 0 8 0);
+
+  @include mq(tablet) {
+    margin: rem(0 0 8 0);
+  }
 }
 
 .subtitle {
@@ -54,7 +70,7 @@
   margin: rem(0 -16);
   padding: rem(16);
 
-  @include mq(desktop) {
+  @include mq(tablet) {
     margin: 0;
     padding: rem(16);
   }
